--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # This can be your default branch or another branch you're using
+      - main  # or your default branch
 
 jobs:
   build:
@@ -14,11 +14,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Bun
-        run: curl -fsSL https://bun.sh/install | bash
+        run: |
+          curl -fsSL https://bun.sh/install | bash
+          echo "$HOME/.bun/bin" >> $GITHUB_PATH  # Make Bun available globally
         shell: bash
-
-      - name: Set up Bun
-        run: export PATH="$HOME/.bun/bin:$PATH"
 
       - name: Install dependencies
         run: bun install
@@ -29,6 +28,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
-          branch: gh-pages  # The branch to deploy to
-          folder: build     # The folder to deploy (adjust based on your build output folder, typically it's `build` or `dist`)
+          branch: gh-pages  # the branch to deploy to
+          folder: build     # the folder to deploy
           token: ${{ secrets.GITHUB_TOKEN }}
