update deployment workflow to use Bun instead of Yarn

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,6 @@ on:
       - main  # or your default branch
 permissions:
   contents: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,18 +14,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Yarn
+      - name: Install Bun
         run: |
-          curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-          echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-          sudo apt update && sudo apt install yarn
+          curl -fsSL https://bun.sh/install | bash
+          echo "$HOME/.bun/bin" >> $GITHUB_PATH  # Make Bun available globally
         shell: bash
 
       - name: Install dependencies
-        run: yarn install
+        run: bun install
 
       - name: Build the project
-        run: yarn build
+        run: bun run build
 
       - name: Check build output
         run: ls -l build
