update deployment workflow to publish from ./dist and add deploy script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,3 +35,4 @@ jobs:
           branch: gh-pages  # the branch to deploy to
           folder: build     # the folder to deploy
           token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
